Baseball2020Parser.py
# Generated from Baseball2020.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class Baseball2020Parser ( Parser ):

    grammarFileName = "Baseball2020.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'de error'", "'por WP o FCH'", "'por Pass Ball o Error probabilidad de Out'", 
                     "'tratando de anotar'", "'tratando de llegar a'", "'se mantiene con vida'", 
                     "'por WP, BK o BDP'", "'avanza hasta'", "'sorprendido'", 
                     "'es quieto en'", "'.'", "','", "'recibe'", "'se'", 
                     "'continua'", "'avanza a'", "'llega a'", "'es'", "'Out'", 
                     "'y'", "'Cambio de'", "'Cambio a la Ofensiva en el Turno'", 
                     "'Cierre de actuacion del Lanzador #'", "'Entra'", 
                     "'Sale'", "'-'", "'['", "']'", "':'", "'y llega a 1B'", 
                     "'Base por Bolas'", "'Base por Bolas Intencional'", 
                     "'Pelotazo'", "'Poncha'", "'embasa por'", "'roba'", 
                     "'cogido robando'", "'bateando'", "<INVALID>", "'batea'", 
                     "'conecta'", "'Primera Base'", "'Segunda Base'", "'Tercera Base'", 
                     "'Home'", "'Sencillo'", "'Doble'", "'Triple'", "'un Fly de sacrificio'", 
                     "'sacrificio de Hit'", "'Jonron'", "'para Doble Play'", 
                     "'de fly'", "'de linea'", "'de rolling'", "'al jardin izquierdo'", 
                     "'al jardin central'", "'al jardin derecho'", "'Error probabilidad de Out'", 
                     "'por error'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Lanzador'", "'Receptor'", "'1B'", "'2B'", 
                     "'3B'", "'SS'", "'LF'", "'CF'", "'RF'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "POINT", "COMA", 
                      "GET", "SE", "KEEP", "GO", "GOTO", "ES", "OUT", "AND", 
                      "CHANGE", "OCHANGE", "CLOSEACT", "IN", "SALE", "GUION", 
                      "OBRACKET", "CBRACKET", "COLON", "GETFIRST", "BB", 
                      "BI", "DB", "SO", "ONBASE", "STEAL", "CS", "BAT", 
                      "SCORE", "HIT", "CONECTA", "PRIMERA", "SEGUNDA", "TERCERA", 
                      "HOME", "SINGLE", "DOBLE", "TRIPLE", "SACRIFLY", "SACRIHIT", 
                      "HOMERUN", "DP", "FLY", "LINE", "ROLL", "LEFT", "CENTER", 
                      "RIGHT", "ERROR", "EE", "FCH", "XERROR", "YERROR", 
                      "OTROERROR", "P", "R", "BASE1", "BASE2", "BASE3", 
                      "SHORT", "LFILD", "CFILD", "RFILD", "STRING", "INT", 
                      "FLOAT", "WS" ]

    RULE_name = 0
    RULE_stat = 1
    RULE_act = 2
    RULE_plays = 3
    RULE_play = 4
    RULE_recibeType = 5
    RULE_baseType = 6
    RULE_hitType = 7
    RULE_bases = 8
    RULE_connectionType = 9
    RULE_direction = 10
    RULE_outType = 11
    RULE_endlineType = 12
    RULE_errorType = 13
    RULE_onbaseType = 14

    ruleNames =  [ "name", "stat", "act", "plays", "play", "recibeType", 
                   "baseType", "hitType", "bases", "connectionType", "direction", 
                   "outType", "endlineType", "errorType", "onbaseType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    POINT=11
    COMA=12
    GET=13
    SE=14
    KEEP=15
    GO=16
    GOTO=17
    ES=18
    OUT=19
    AND=20
    CHANGE=21
    OCHANGE=22
    CLOSEACT=23
    IN=24
    SALE=25
    GUION=26
    OBRACKET=27
    CBRACKET=28
    COLON=29
    GETFIRST=30
    BB=31
    BI=32
    DB=33
    SO=34
    ONBASE=35
    STEAL=36
    CS=37
    BAT=38
    SCORE=39
    HIT=40
    CONECTA=41
    PRIMERA=42
    SEGUNDA=43
    TERCERA=44
    HOME=45
    SINGLE=46
    DOBLE=47
    TRIPLE=48
    SACRIFLY=49
    SACRIHIT=50
    HOMERUN=51
    DP=52
    FLY=53
    LINE=54
    ROLL=55
    LEFT=56
    CENTER=57
    RIGHT=58
    ERROR=59
    EE=60
    FCH=61
    XERROR=62
    YERROR=63
    OTROERROR=64
    P=65
    R=66
    BASE1=67
    BASE2=68
    BASE3=69
    SHORT=70
    LFILD=71
    CFILD=72
    RFILD=73
    STRING=74
    INT=75
    FLOAT=76
    WS=77

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class NameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.STRING)
            else:
                return self.getToken(Baseball2020Parser.STRING, i)

        def POINT(self):
            return self.getToken(Baseball2020Parser.POINT, 0)

        def getRuleIndex(self):
            return Baseball2020Parser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)




    def name(self):

        localctx = Baseball2020Parser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(Baseball2020Parser.STRING)
            self.state = 31
            self.match(Baseball2020Parser.POINT)
            self.state = 32
            self.match(Baseball2020Parser.STRING)
            self.state = 36
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 33
                    self.match(Baseball2020Parser.STRING) 
                self.state = 38
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(Baseball2020Parser.STRING, 0)

        def COLON(self):
            return self.getToken(Baseball2020Parser.COLON, 0)

        def FLOAT(self):
            return self.getToken(Baseball2020Parser.FLOAT, 0)

        def INT(self):
            return self.getToken(Baseball2020Parser.INT, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.COMA)
            else:
                return self.getToken(Baseball2020Parser.COMA, i)

        def getRuleIndex(self):
            return Baseball2020Parser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = Baseball2020Parser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self.match(Baseball2020Parser.STRING)
            self.state = 40
            self.match(Baseball2020Parser.COLON)
            self.state = 41
            _la = self._input.LA(1)
            if not(_la==Baseball2020Parser.INT or _la==Baseball2020Parser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Baseball2020Parser.COMA:
                self.state = 42
                self.match(Baseball2020Parser.COMA)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.StatContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.StatContext,i)


        def getRuleIndex(self):
            return Baseball2020Parser.RULE_act

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAct" ):
                listener.enterAct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAct" ):
                listener.exitAct(self)




    def act(self):

        localctx = Baseball2020Parser.ActContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_act)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.stat()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==Baseball2020Parser.STRING):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlaysContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def play(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.PlayContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.PlayContext,i)


        def getRuleIndex(self):
            return Baseball2020Parser.RULE_plays

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlays" ):
                listener.enterPlays(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlays" ):
                listener.exitPlays(self)




    def plays(self):

        localctx = Baseball2020Parser.PlaysContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_plays)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.play()
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Baseball2020Parser.T__8) | (1 << Baseball2020Parser.CHANGE) | (1 << Baseball2020Parser.OCHANGE) | (1 << Baseball2020Parser.CLOSEACT))) != 0) or _la==Baseball2020Parser.STRING):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.NameContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.NameContext,i)


        def GET(self):
            return self.getToken(Baseball2020Parser.GET, 0)

        def recibeType(self):
            return self.getTypedRuleContext(Baseball2020Parser.RecibeTypeContext,0)


        def POINT(self):
            return self.getToken(Baseball2020Parser.POINT, 0)

        def SE(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.SE)
            else:
                return self.getToken(Baseball2020Parser.SE, i)

        def SO(self):
            return self.getToken(Baseball2020Parser.SO, 0)

        def endlineType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.EndlineTypeContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.EndlineTypeContext,i)


        def GETFIRST(self):
            return self.getToken(Baseball2020Parser.GETFIRST, 0)

        def KEEP(self):
            return self.getToken(Baseball2020Parser.KEEP, 0)

        def BAT(self):
            return self.getToken(Baseball2020Parser.BAT, 0)

        def STEAL(self):
            return self.getToken(Baseball2020Parser.STEAL, 0)

        def baseType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.BaseTypeContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.BaseTypeContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.COMA)
            else:
                return self.getToken(Baseball2020Parser.COMA, i)

        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.AND)
            else:
                return self.getToken(Baseball2020Parser.AND, i)

        def GO(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.GO)
            else:
                return self.getToken(Baseball2020Parser.GO, i)

        def bases(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.BasesContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.BasesContext,i)


        def errorType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.ErrorTypeContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.ErrorTypeContext,i)


        def SCORE(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.SCORE)
            else:
                return self.getToken(Baseball2020Parser.SCORE, i)

        def ES(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.ES)
            else:
                return self.getToken(Baseball2020Parser.ES, i)

        def OUT(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.OUT)
            else:
                return self.getToken(Baseball2020Parser.OUT, i)

        def GOTO(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.GOTO)
            else:
                return self.getToken(Baseball2020Parser.GOTO, i)

        def FCH(self):
            return self.getToken(Baseball2020Parser.FCH, 0)

        def HIT(self):
            return self.getToken(Baseball2020Parser.HIT, 0)

        def hitType(self):
            return self.getTypedRuleContext(Baseball2020Parser.HitTypeContext,0)


        def connectionType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.ConnectionTypeContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.ConnectionTypeContext,i)


        def direction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.DirectionContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.DirectionContext,i)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.INT)
            else:
                return self.getToken(Baseball2020Parser.INT, i)

        def ONBASE(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.ONBASE)
            else:
                return self.getToken(Baseball2020Parser.ONBASE, i)

        def onbaseType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.OnbaseTypeContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.OnbaseTypeContext,i)


        def CONECTA(self):
            return self.getToken(Baseball2020Parser.CONECTA, 0)

        def outType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Baseball2020Parser.OutTypeContext)
            else:
                return self.getTypedRuleContext(Baseball2020Parser.OutTypeContext,i)


        def SACRIHIT(self):
            return self.getToken(Baseball2020Parser.SACRIHIT, 0)

        def CHANGE(self):
            return self.getToken(Baseball2020Parser.CHANGE, 0)

        def IN(self):
            return self.getToken(Baseball2020Parser.IN, 0)

        def GUION(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.GUION)
            else:
                return self.getToken(Baseball2020Parser.GUION, i)

        def SALE(self, i:int=None):
            if i is None:
                return self.getTokens(Baseball2020Parser.SALE)
            else:
                return self.getToken(Baseball2020Parser.SALE, i)

        def OCHANGE(self):
            return self.getToken(Baseball2020Parser.OCHANGE, 0)

        def CLOSEACT(self):
            return self.getToken(Baseball2020Parser.CLOSEACT, 0)

        def OBRACKET(self):
            return self.getToken(Baseball2020Parser.OBRACKET, 0)

        def act(self):
            return self.getTypedRuleContext(Baseball2020Parser.ActContext,0)


        def CBRACKET(self):
            return self.getToken(Baseball2020Parser.CBRACKET, 0)

        def CS(self):
            return self.getToken(Baseball2020Parser.CS, 0)

        def EE(self):
            return self.getToken(Baseball2020Parser.EE, 0)

        def getRuleIndex(self):
            return Baseball2020Parser.RULE_play

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlay" ):
                listener.enterPlay(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlay" ):
                listener.exitPlay(self)




    def play(self):

        localctx = Baseball2020Parser.PlayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_play)
        self._la = 0 # Token type
        try:
            self.state = 393
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,40,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.name()
                self.state = 59
                self.match(Baseball2020Parser.GET)
                self.state = 60
                self.recibeType()
                self.state = 61
                self.match(Baseball2020Parser.POINT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.name()
                self.state = 64
                self.match(Baseball2020Parser.GET)
                self.state = 65
                self.recibeType()
                self.state = 66
                self.match(Baseball2020Parser.T__0)
                self.state = 67
                self.match(Baseball2020Parser.POINT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 69
                self.name()
                self.state = 70
                self.match(Baseball2020Parser.SE)
                self.state = 71
                self.match(Baseball2020Parser.SO)
                self.state = 72
                self.match(Baseball2020Parser.POINT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 74
                self.name()
                self.state = 75
                self.match(Baseball2020Parser.SE)
                self.state = 76
                self.match(Baseball2020Parser.SO)
                self.state = 77
                self.match(Baseball2020Parser.T__0)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Baseball2020Parser.POINT or _la==Baseball2020Parser.COMA:
                    self.state = 78
                    self.endlineType()
                    self.state = 83
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.name()
                self.state = 85
                self.match(Baseball2020Parser.SE)
                self.state = 86
                self.match(Baseball2020Parser.SO)
                self.state = 87
                self.match(Baseball2020Parser.GETFIRST)
                self.state = 88
                self.match(Baseball2020Parser.T__1)
                self.state = 89
                self.match(Baseball2020Parser.POINT)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 91
                self.name()
                self.state = 92
                self.match(Baseball2020Parser.SE)
                self.state = 93
                self.match(Baseball2020Parser.SO)
                self.state = 94
                self.match(Baseball2020Parser.GETFIRST)
                self.state = 95
                self.match(Baseball2020Parser.T__2)
                self.state = 96
                self.match(Baseball2020Parser.POINT)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 98
                self.name()
                self.state = 99
                self.match(Baseball2020Parser.KEEP)
                self.state = 100
                self.match(Baseball2020Parser.BAT)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Baseball2020Parser.T__0:
                    self.state = 101
                    self.match(Baseball2020Parser.T__0)
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 107
                self.match(Baseball2020Parser.POINT)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.name()
                self.state = 110
                self.match(Baseball2020Parser.SE)
                self.state = 111
                self.match(Baseball2020Parser.STEAL)
                self.state = 112
                self.baseType()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 20)) & ~0x3f) == 0 and ((1 << (_la - 20)) & ((1 << (Baseball2020Parser.AND - 20)) | (1 << (Baseball2020Parser.ERROR - 20)) | (1 << (Baseball2020Parser.EE - 20)) | (1 << (Baseball2020Parser.FCH - 20)) | (1 << (Baseball2020Parser.XERROR - 20)) | (1 << (Baseball2020Parser.YERROR - 20)) | (1 << (Baseball2020Parser.OTROERROR - 20)))) != 0):
                    self.state = 130
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        self.state = 113
                        self.match(Baseball2020Parser.AND)
                        self.state = 114
                        self.match(Baseball2020Parser.GO)
                        self.state = 115
                        self.bases()
                        self.state = 116
                        self.errorType()
                        pass

                    elif la_ == 2:
                        self.state = 118
                        self.match(Baseball2020Parser.AND)
                        self.state = 119
                        self.match(Baseball2020Parser.SCORE)
                        self.state = 120
                        self.errorType()
                        pass

                    elif la_ == 3:
                        self.state = 121
                        self.errorType()
                        pass

                    elif la_ == 4:
                        self.state = 122
                        self.match(Baseball2020Parser.AND)
                        self.state = 123
                        self.match(Baseball2020Parser.ES)
                        self.state = 124
                        self.match(Baseball2020Parser.OUT)
                        self.state = 128
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [Baseball2020Parser.T__3]:
                            self.state = 125
                            self.match(Baseball2020Parser.T__3)
                            pass
                        elif token in [Baseball2020Parser.T__4]:
                            self.state = 126
                            self.match(Baseball2020Parser.T__4)
                            self.state = 127
                            self.bases()
                            pass
                        else:
                            raise NoViableAltException(self)

                        pass


                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 135
                    self.match(Baseball2020Parser.COMA)
                    self.state = 138 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==Baseball2020Parser.COMA):
                        break

                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 140
                self.name()
                self.state = 141
                self.match(Baseball2020Parser.GO)
                self.state = 142
                self.baseType()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 20)) & ~0x3f) == 0 and ((1 << (_la - 20)) & ((1 << (Baseball2020Parser.AND - 20)) | (1 << (Baseball2020Parser.ERROR - 20)) | (1 << (Baseball2020Parser.EE - 20)) | (1 << (Baseball2020Parser.FCH - 20)) | (1 << (Baseball2020Parser.XERROR - 20)) | (1 << (Baseball2020Parser.YERROR - 20)) | (1 << (Baseball2020Parser.OTROERROR - 20)))) != 0):
                    self.state = 163
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        self.state = 143
                        self.match(Baseball2020Parser.AND)
                        self.state = 144
                        self.match(Baseball2020Parser.GOTO)
                        self.state = 145
                        self.baseType()
                        self.state = 146
                        self.errorType()
                        pass

                    elif la_ == 2:
                        self.state = 148
                        self.match(Baseball2020Parser.AND)
                        self.state = 149
                        self.match(Baseball2020Parser.SCORE)
                        self.state = 150
                        self.errorType()
                        pass

                    elif la_ == 3:
                        self.state = 151
                        self.errorType()
                        pass

                    elif la_ == 4:
                        self.state = 152
                        self.match(Baseball2020Parser.AND)
                        self.state = 153
                        self.match(Baseball2020Parser.ES)
                        self.state = 154
                        self.match(Baseball2020Parser.OUT)
                        self.state = 158
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [Baseball2020Parser.T__3]:
                            self.state = 155
                            self.match(Baseball2020Parser.T__3)
                            pass
                        elif token in [Baseball2020Parser.T__4]:
                            self.state = 156
                            self.match(Baseball2020Parser.T__4)
                            self.state = 157
                            self.bases()
                            pass
                        else:
                            raise NoViableAltException(self)

                        pass

                    elif la_ == 5:
                        self.state = 160
                        self.match(Baseball2020Parser.AND)
                        self.state = 161
                        self.match(Baseball2020Parser.T__5)
                        self.state = 162
                        self.errorType()
                        pass


                    self.state = 167
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 169 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 168
                    self.match(Baseball2020Parser.COMA)
                    self.state = 171 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==Baseball2020Parser.COMA):
                        break

                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 173
                self.name()
                self.state = 174
                self.match(Baseball2020Parser.SCORE)
                self.state = 178
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Baseball2020Parser.T__6:
                    self.state = 175
                    self.match(Baseball2020Parser.T__6)
                    self.state = 180
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Baseball2020Parser.COMA:
                    self.state = 181
                    self.match(Baseball2020Parser.COMA)
                    self.state = 186
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 187
                self.name()
                self.state = 188
                self.match(Baseball2020Parser.SCORE)
                self.state = 189
                self.match(Baseball2020Parser.FCH)
                self.state = 193
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Baseball2020Parser.POINT or _la==Baseball2020Parser.COMA:
                    self.state = 190
                    self.endlineType()
                    self.state = 195
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 196
                self.name()
                self.state = 197
                self.match(Baseball2020Parser.HIT)
                self.state = 198
                self.hitType()
                self.state = 210
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Baseball2020Parser.GOTO or _la==Baseball2020Parser.AND:
                    self.state = 208
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
